--- a/products/sss-pendant-silver.html
+++ b/products/sss-pendant-silver.html
@@ -22,14 +22,14 @@
       <button class="menu-btn" aria-label="Open menu" aria-expanded="false">
         <span class="menu-icon" aria-hidden="true"></span>
       </button>
-      <button class="cart-toggle" type="button" aria-label="Open cart">
-        Cart <span class="cart-count" aria-hidden="true">0</span>
-      </button>
+
       <div class="links">
         <div class="dropdown">
           <button class="drop-btn" aria-haspopup="true" aria-expanded="false">
             Collections
-            <svg class="caret" viewBox="0 0 24 24" width="14" height="14" aria-hidden="true"><path fill="currentColor" d="M7 10l5 5 5-5z"/></svg>
+            <svg class="caret" viewBox="0 0 24 24" width="14" height="14" aria-hidden="true">
+              <path fill="currentColor" d="M7 10l5 5 5-5z"/>
+            </svg>
           </button>
           <div class="drop-menu" role="menu">
             <a href="../collections/sss.html" role="menuitem">SSS</a>
@@ -44,6 +44,10 @@
         <span class="sep">·</span>
         <a href="../index.html#about">About</a>
       </div>
+
+      <button class="cart-toggle" type="button" aria-label="Open cart">
+        Cart <span class="cart-count" aria-hidden="true">0</span>
+      </button>
     </nav>
   </div>
 </header>
