--- a/products/ee-female-ring-silver.html
+++ b/products/ee-female-ring-silver.html
@@ -65,7 +65,7 @@
     <div class="product">
       <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/ee-f-silver-1.jpg,../img/products/ee-f-silver-2.jpg">
+        <div class="product-gallery" data-images="../img/products/EE-female-ring-silver-1.jpg,../img/products/EE-female-ring-silver-2.png">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
@@ -267,6 +267,7 @@
 <!-- Back to top -->
 <button id="back-to-top" aria-label="Back to top">↑</button>
 
+<script src="../js/products-data.js" defer></script>
 <script src="../js/app.js" defer></script>
 </body>
 </html>
