--- a/products/foto-ring.html
+++ b/products/foto-ring.html
@@ -265,6 +265,7 @@
 <!-- Back to top -->
 <button id="back-to-top" aria-label="Back to top">↑</button>
 
+<script src="../js/products-data.js" defer></script>
 <script src="../js/app.js" defer></script>
 </body>
 </html>
