--- a/products/ee-male-ring-black-rhodium-stone.html
+++ b/products/ee-male-ring-black-rhodium-stone.html
@@ -65,7 +65,7 @@
     <div class="product">
       <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/ee-m-br-stone-1.jpg,../img/products/ee-m-br-stone-2.jpg">
+        <div class="product-gallery" data-images="../img/products/EE-male-ring-BR-trap-1.jpg">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
@@ -266,6 +266,7 @@
 <!-- Back to top -->
 <button id="back-to-top" aria-label="Back to top">↑</button>
 
+<script src="../js/products-data.js" defer></script>
 <script src="../js/app.js" defer></script>
 </body>
 </html>
