--- a/collections/sss.html
+++ b/collections/sss.html
@@ -179,8 +179,8 @@
             if (!collectionProducts.length){
                 // Fallback
                 collectionProducts.push(
-                    { view: '../products/sss-pendant-gold.html', title: 'SSS pendant — gold', price: '$125', priceNum: 125, meta: 'Also available in silver.', images: ['../img/products/sss-gold-1.jpg'] },
-                    { view: '../products/sss-pendant-silver.html', title: 'SSS pendant — silver', price: '$125', priceNum: 125, meta: 'Sterling silver finish.', images: ['../img/products/sss-silver-2.jpg'] }
+                    { view: '../products/sss-pendant-gold.html', title: 'SSS pendant — gold', price: '$125', priceNum: 125, meta: 'Also available in silver.', images: ['../img/products/sss-gold/sss-gold-1.jpeg', '../img/products/sss-gold/sss-gold-2.jpeg', '../img/products/sss-gold/sss-gold-3.jpeg', '../img/products/sss-gold/sss-gold-4.jpeg', '../img/products/sss-gold/sss-gold-5.jpeg', '../img/products/sss-gold/sss-gold-6.jpeg', '../img/products/sss-gold/sss-gold-7.jpeg', '../img/products/sss-gold/sss-gold-8.jpeg', '../img/products/sss-gold/sss-gold-9.jpeg', '../img/products/sss-gold/sss-gold-10.jpeg', '../img/products/sss-gold/sss-gold-11.jpeg'] },
+                    { view: '../products/sss-pendant-silver.html', title: 'SSS pendant — silver', price: '$125', priceNum: 125, meta: 'Sterling silver finish.', images: ['../img/products/sss-silver/sss-silver-1.jpeg', '../img/products/sss-silver/sss-silver-2.jpeg', '../img/products/sss-silver/sss-silver-3.jpeg', '../img/products/sss-silver/sss-silver-4.jpeg', '../img/products/sss-silver/sss-silver-5.jpeg', '../img/products/sss-silver/sss-silver-6.jpeg', '../img/products/sss-silver/sss-silver-7.jpeg', '../img/products/sss-silver/sss-silver-8.jpeg', '../img/products/sss-silver/sss-silver-9.jpeg', '../img/products/sss-silver/sss-silver-10.jpeg', '../img/products/sss-silver/sss-silver-11.jpeg'] }
                 );
             }
 
