--- a/collections/whispering-a.html
+++ b/collections/whispering-a.html
@@ -178,9 +178,9 @@
       if (!collectionProducts.length){
         // Fallback
         collectionProducts.push(
-                { view: '../products/foto-ring.html', title: 'FOTO ring', price: '$345', priceNum: 345, meta: 'Graphic statement piece.', images: ['../img/products/foto-ring-1.jpg'] },
-                { view: '../products/foto-earring.html', title: 'FOTO earring', price: '$310', priceNum: 310, meta: 'Minimalist geometry.', images: ['../img/products/foto-earring-1.jpg'] },
-                { view: '../products/foto-necklace.html', title: 'FOTO necklace', price: '$935', priceNum: 935, meta: 'Neckline centerpiece.', images: ['../img/products/foto-necklace-1.jpg'] }
+                { view: '../products/foto-ring.html', title: 'FOTO ring', price: '$345', priceNum: 345, meta: 'Graphic statement piece.', images: ['../img/products/foto-ring/foto-ring-1.jpg', '../img/products/foto-ring/foto-ring-2.jpg'] },
+                { view: '../products/foto-earring.html', title: 'FOTO earring', price: '$310', priceNum: 310, meta: 'Minimalist geometry.', images: ['../img/products/foto-earring/foto-earring-1.jpg', '../img/products/foto-earring/foto-earring-2.jpg'] },
+                { view: '../products/foto-necklace.html', title: 'FOTO necklace', price: '$935', priceNum: 935, meta: 'Neckline centerpiece.', images: ['../img/products/foto-necklace/foto-necklace-1.jpg', '../img/products/foto-necklace/foto-necklace-2.jpg'] }
         );
       }
 
