--- a/products/ee-female-ring-silver.html
+++ b/products/ee-female-ring-silver.html
@@ -65,7 +65,7 @@
     <div class="product">
       <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/EE-female-ring-silver-1.jpg,../img/products/EE-female-ring-silver-2.png">
+        <div class="product-gallery" data-images="../img/products/EE-female-ring-silver/EE-female-ring-silver-1.jpeg,../img/products/EE-female-ring-silver/EE-female-ring-silver-2.jpeg,../img/products/EE-female-ring-silver/EE-female-ring-silver-3.jpeg,../img/products/EE-female-ring-silver/EE-female-ring-silver-4.jpeg,../img/products/EE-female-ring-silver/EE-female-ring-silver-5.jpeg">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
@@ -217,11 +217,9 @@
           <p>Pair it with complementary pieces.</p>
         </div>
         <div class="related-strip" id="dynamic-related">
-
           <div class="related-track" data-auto="true">
             <!-- Dynamically populated by JS -->
           </div>
-
           <div class="swipe-indicator" aria-hidden="true"><div class="thumb"></div></div>
         </div>
       </section>
