--- a/products/ee-male-ring-black-rhodium-stone.html
+++ b/products/ee-male-ring-black-rhodium-stone.html
@@ -65,7 +65,7 @@
     <div class="product">
       <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/EE-male-ring-BR-trap-1.jpg">
+        <div class="product-gallery" data-images="../img/products/EE-male-ring-BR-trap/EE-male-ring-BR-trap-1.jpeg,../img/products/EE-male-ring-BR-trap/EE-male-ring-BR-trap-2.jpeg,../img/products/EE-male-ring-BR-trap/EE-male-ring-BR-trap-3.jpeg,../img/products/EE-male-ring-BR-trap/EE-male-ring-BR-trap-4.jpeg,../img/products/EE-male-ring-BR-trap/EE-male-ring-BR-trap-5.jpeg">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
