--- a/products/foto-ring.html
+++ b/products/foto-ring.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <span class="sep">·</span>
-        <a href../index.html#products">All Products</a>
+        <a href="../index.html#products">All Products</a>
         <span class="sep">·</span>
         <a href="../index.html#contact">Contact</a>
         <span class="sep">·</span>
