--- a/products/legs-pendant.html
+++ b/products/legs-pendant.html
@@ -65,7 +65,7 @@
         <div class="product">
             <!-- LEFT: Gallery -->
             <div>
-                <div class="product-gallery" data-images="../img/products/LEGS-pendant-1.jpg,../img/products/LEGS-pendant-2.jpg,../img/products/LEGS-pendant-3.jpg,../img/products/LEGS-pendant-4.jpg,../img/products/LEGS-pendant-5.jpg">
+                <div class="product-gallery" data-images="../img/products/LEGS-pendant/LEGS-pendant-1.jpg,../img/products/LEGS-pendant/LEGS-pendant-2.jpg,../img/products/LEGS-pendant/LEGS-pendant-3.jpg,../img/products/LEGS-pendant/LEGS-pendant-4.jpg,../img/products/LEGS-pendant/LEGS-pendant-5.jpg,../img/products/LEGS-pendant/LEGS-pendant-6.jpg,../img/products/LEGS-pendant/LEGS-pendant-7.jpg">
                     <div class="slides"></div>
                     <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
                     <button class="slider-btn slider-next" aria-label="Next">›</button>
