--- a/products/sss-pendant-silver.html
+++ b/products/sss-pendant-silver.html
@@ -65,7 +65,7 @@
     <div class="product">
       <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/sss-silver-2.jpg,../img/products/sss-silver-3.jpg,../img/products/sss-silver-5.jpg">
+        <div class="product-gallery" data-images="../img/products/sss-silver/sss-silver-1.jpeg,../img/products/sss-silver/sss-silver-2.jpeg,../img/products/sss-silver/sss-silver-3.jpeg,../img/products/sss-silver/sss-silver-4.jpeg,../img/products/sss-silver/sss-silver-5.jpeg,../img/products/sss-silver/sss-silver-6.jpeg,../img/products/sss-silver/sss-silver-7.jpeg,../img/products/sss-silver/sss-silver-8.jpeg,../img/products/sss-silver/sss-silver-9.jpeg,../img/products/sss-silver/sss-silver-10.jpeg,../img/products/sss-silver/sss-silver-11.jpeg">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
@@ -254,6 +254,5 @@
 
 <script src="../js/products-data.js" defer></script>
 <script src="../js/app.js" defer></script>
-
 </body>
 </html>
