--- a/products/ee-female-ring-black-rhodium.html
+++ b/products/ee-female-ring-black-rhodium.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>EE female ring — black rhodium · EDELHART</title>
-  <meta name="description" content="EE female ring in black rhodium — dark finish with high contrast edges. Limited oxidation wear for character." />
+  <title>EE female ring — gold · EDELHART</title>
+  <meta name="description" content="EE female ring in gold — elegant gold finish with the signature EE profile. Comfortable taper for daily wear." />
   <link rel="icon" type="image/png" href="../img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,7 +57,7 @@
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <a href="../index.html#collections">Collections</a>
       <a href="../collections/the-core.html">The Core</a>
-      <span aria-current="page">EE female ring — black rhodium</span>
+      <span aria-current="page">EE female ring — gold</span>
     </nav>
 
     <a class="page-back" href="../index.html#products" aria-label="Back to catalog">Back to catalog</a>
@@ -65,7 +65,7 @@
     <div class="product">
       <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/EE-female-ring-BR-1.jpg">
+        <div class="product-gallery" data-images="../img/products/EE-female-ring-gold/EE-female-ring-gold-1.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-2.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-3.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-4.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-5.jpeg">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
@@ -79,16 +79,16 @@
 
       <!-- RIGHT: Checkout -->
       <aside class="checkout">
-        <div class="title">EE female ring — black rhodium</div>
+        <div class="title">EE female ring — gold</div>
         <div class="price">$140</div>
 
         <form data-product="EE female ring">
           <div>
             <label for="metal">Metal</label>
             <select id="metal" name="metal">
-              <option>Black Rhodium</option>
-              <option>E-Silver</option>
               <option>14K Gold</option>
+              <option>E-Silver</option>
+              <option>Black Rhodium</option>
             </select>
           </div>
 
@@ -125,7 +125,7 @@
 
           <div class="actions">
             <button type="button" class="btn add-to-cart">Add to cart</button>
-            <a href="https://wa.me/84944445084?text=Hello%20EDELHART%2C%20I%27m%20interested%20in%20the%20EE%20female%20ring%20%E2%80%94%20black%20rhodium."
+            <a href="https://wa.me/84944445084?text=Hello%20EDELHART%2C%20I%27m%20interested%20in%20the%20EE%20female%20ring%20%E2%80%94%20gold."
                class="btn primary" target="_blank" rel="noopener noreferrer" aria-label="Order via WhatsApp" title="Order via WhatsApp">
               <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
                 <path d="M12 2a10 10 0 00-8 16.1L3 22l3.9-1A10 10 0 1012 2zm5.2 14.2c-.2.6-1.2 1.1-1.7 1.1-.5 0-1 .2-3.3-1.1-2.8-1.6-4.5-4.6-4.6-4.8-.2-.3-1.1-1.5-1.1-2.8 0-1.2.6-1.8.9-2 .3-.2.8-.3 1-.3h.7c.2 0 .5 0 .7.6.3.7 1 2.4 1 2.5s.1.4 0 .6c-.1.2-.2.3-.4.5-.2.2-.4.5-.6.6-.2.2-.4.4-.2.7.2.3.9 1.5 2.1 2.4 1.5 1.1 2.7 1.5 3.1 1.7.3.1.6.1.8 0 .2-.1 1.3-.6 1.5-.8.2-.1.4-.2.7-.1.2.1 1.1.5 1.3.6.2.1.3.1.4.2.1 0 .1.6-.1 1.1z"/>
@@ -165,7 +165,7 @@
         <h3>About This Piece</h3>
         <p>
           The EE female ring embodies our signature aesthetic — refined minimalism with a statement edge.
-          Crafted in black rhodium with dark finish and high contrast edges, this piece features limited oxidation wear for character.
+          Crafted in gold with elegant finish and the signature EE profile, this piece features comfortable taper for daily wear.
           Each ring is hand-finished to ensure exceptional quality and lasting beauty.
         </p>
       </div>
