--- a/products/ee-female-ring-gold.html
+++ b/products/ee-female-ring-gold.html
@@ -65,7 +65,7 @@
     <div class="product">
       <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/EE-female-ring-gold-1.jpg">
+        <div class="product-gallery" data-images="../img/products/EE-female-ring-gold/EE-female-ring-gold-1.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-2.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-3.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-4.jpeg,../img/products/EE-female-ring-gold/EE-female-ring-gold-5.jpeg">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
