--- a/products/ee-male-ring-silver.html
+++ b/products/ee-male-ring-silver.html
@@ -65,7 +65,7 @@
     <div class="product">
       <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/EE-male-ring-silver-1.jpg">
+        <div class="product-gallery" data-images="../img/products/EE-male-ring-silver/EE-male-ring-silver-1.jpeg,../img/products/EE-male-ring-silver/EE-male-ring-silver-2.jpeg,../img/products/EE-male-ring-silver/EE-male-ring-silver-3.jpeg,../img/products/EE-male-ring-silver/EE-male-ring-silver-4.jpeg">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
