--- a/products/sss-pendant-gold.html
+++ b/products/sss-pendant-gold.html
@@ -65,10 +65,13 @@
     <div class="product">
       <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/sss-gold/sss-gold-1.jpeg,../img/products/sss-gold/sss-gold-2.jpeg,../img/products/sss-gold/sss-gold-3.jpeg,../img/products/sss-gold/sss-gold-4.jpeg,../img/products/sss-gold/sss-gold-5.jpeg,../img/products/sss-gold/sss-gold-6.jpeg,../img/products/sss-gold/sss-gold-7.jpeg,../img/products/sss-gold/sss-gold-8.jpeg,../img/products/sss-gold/sss-gold-9.jpeg,../img/products/sss-gold/sss-gold-10.jpeg,../img/products/sss-gold/sss-gold-11.jpeg">
+        <div
+                class="product-gallery"
+                data-images="../img/products/sss-gold/sss-gold-1.jpeg,../img/products/sss-gold/sss-gold-2.jpeg,../img/products/sss-gold/sss-gold-3.jpeg,../img/products/sss-gold/sss-gold-4.jpeg,../img/products/sss-gold/sss-gold-5.jpeg,../img/products/sss-gold/sss-gold-6.jpeg,../img/products/sss-gold/sss-gold-7.jpeg,../img/products/sss-gold/sss-gold-8.jpeg,../img/products/sss-gold/sss-gold-9.jpeg,../img/products/sss-gold/sss-gold-10.jpeg,../img/products/sss-gold/sss-gold-11.jpeg"
+        >
           <div class="slides"></div>
-          <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
-          <button class="slider-btn slider-next" aria-label="Next">›</button>
+          <button class="slider-btn slider-prev" aria-label="Previous image">&#10094;</button>
+          <button class="slider-btn slider-next" aria-label="Next image">&#10095;</button>
           <div class="thumbs"></div>
         </div>
         <!-- Thumbnail strip below gallery -->
